fixed spacing issue between navbar items

--- a/CSS Files/Dropdown_menu.css
+++ b/CSS Files/Dropdown_menu.css
@@ -1,8 +1,4 @@
- .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
+
   .dropdown-content {
     display: none;
     position: absolute;
